# homelab-iac

./: .gitignore  .gitlab-ci.yml  README.md  build_structure.ps1  hello.py  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration-mgmt-repo-structure.md  container-diagram.md  container-images-repo-structure.md.md  homelab-iac-repo-structure.md  repositories.md  specification.md  system-context-diagram.md
kubernetes/deployments/: authelia.yaml
pulumi/: Pulumi.dev.yaml  Pulumi.yaml  index.ts
pulumi/stacks/: homelab-dev.ts  homelab-prod.ts
tests/: test_ansible_playbooks.py  test_ci_cd_pipeline.py  test_dependency_management.py  test_documentation.py  test_env_variables.py  test_kubernetes_manifests.py  test_pulumi_config.py  test_sample_script.py
